<resources>

    <string name="app_name" translatable="false">PollenAlert</string>
    <string name="app_label" translatable="false">PollenAlert</string>
    <string name="app_version">1.0</string>

    <!-- Activities titles -->
    <string name="title_activity_forecast">Pollen forecast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About PollenAlert</string>
    <!-- End activities titles -->

    <!-- Actions -->
    <string name="action_refreshForecast">Refresh forecast</string>
    <string name="action_settings">Settings…</string>
    <string name="action_about">About this app…</string>
    <!-- End actions -->

    <!-- Forecast activity -->
    <string name="creationTime">Creation time</string>
    <string name="forecastCreationTime">Forecast creation time</string>
    <string name="counterDefault" translatable="false">0.0</string>
    <string name="levelDefault" translatable="false">very_low</string>
    <string name="timestamp" translatable="false">Timestamp</string>
    <!-- End forecast activity -->

    <!-- Preferences -->
    <string name="pref_searching_settings_title">Searching settings</string>
    <string name="pref_forecast_by_location_title">Get forecast by location</string>
    <string name="pref_woeid_title" translatable="false">WOEID</string>

    <string name="pref_pollen_details_title">Pollen details</string>
    <string name="pref_combined_title">Combined pollen</string>
    <string name="pref_olive_title">Olive pollen</string>
    <string name="pref_grass_title">Grass pollen</string>
    <string name="pref_birch_title">Birch pollen</string>
    <string name="pref_ragweed_title">Ragweed pollen</string>

    <string name="pref_others_title">Others</string>
    <string name="pref_show_notifications_title">Show notifications</string>
    <string name="pref_sync_frequency_title">Forecast sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <!-- End preferences -->

    <!-- Preferences key -->
    <string name="prefKey_forecast_by_location" translatable="false">key_forecast_by_location</string>

    <string name="prefKey_woeid" translatable="false">key_woeid</string>
    <string name="prefKey_woeid_default" translatable="false">-1</string>

    <string name="prefKey_combined" translatable="false">key_combined</string>
    <string name="prefKey_olive" translatable="false">key_olive</string>
    <string name="prefKey_grass" translatable="false">key_grass</string>
    <string name="prefKey_birch" translatable="false">key_birch</string>
    <string name="prefKey_ragweed" translatable="false">key_ragweed</string>

    <string name="prefKey_notifications" translatable="false">key_notifications</string>
    <string name="prefKey_sync_frequency" translatable="false">key_sync_frequency</string>
    <!-- End preferences key -->

    <!-- About strings -->
    <string name="about_icon_description">PollenAlert icon</string>
    <string name="about_team">Team</string>
    <string name="about_developer_label">Lead developer\n/Graphic designer</string>
    <string name="about_developer_value" translatable="false">Agustín Ruiz Linares</string>
    <string name="about_developer_email" translatable="false">correo@agustruiz.es</string>
    <string name="about_website_label">Website</string>
    <string name="about_website_value" translatable="false">www.agustruiz.es</string>
    <string name="about_pollencheck_label">Pollencheck</string>
    <string name="about_pollencheck_value">Provider of pollen forecasts in Europe.</string>
    <string name="about_pollencheck_web" translatable="false">www.pollencheck.eu</string>
    <string name="about_thanks">Thanks</string>
    <!-- End about string -->

    <!-- Shared strings -->
    <string name="combined">Combined</string>
    <string name="olive">Olive</string>
    <string name="grass">Grass</string>
    <string name="birch">Birch</string>
    <string name="ragweed">Ragweed</string>
    <string-array name="daysOfTheWeek">
        <item>NotADay</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Dicember</item>
    </string-array>
    <string name="minimum">Minimum</string>
    <string name="abbr_minimum">Min.</string>
    <string name="average">Average</string>
    <string name="abbr_average">Avg.</string>
    <string name="maximum">Maximum</string>
    <string name="abbr_maximum">Max.</string>
    <string name="woeid" translatable="false">WOEID</string>
    <string name="interval">Interval</string>
    <string name="active">Active</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="myCurrentPosition">My current position</string>
    <string name="search">Search</string>
    <string name="unknown">Unknown</string>
    <string name="very_low">Very low</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="version">Version</string>
    <string name="poweredByPollencheck">Powered by PollenCheck</string>
    <!-- End shared strings -->

    <!-- Messages -->
    <string name="msg_combinedPollenCompulsory">Combined pollen must be checked at least</string>
    <string name="msg_locationNotFound">Location not found.</string>
    <string name="msg_search_hint">Enter location…</string>
    <string name="msg_locationNotEspecified">Location not especified.\nUse the search box from the action bar.</string>
    <string name="msg_noLocationProviderFound">No location provider found in this device.\nPlease, enable location in settings.</string>
    <string name="msg_noInternet">No Internet connection.\nPlease, enable an Internet connection.</string>
    <string name="msg_unexpectedError">An unexpected error has occurred.</string>
    <string name="msg_internalServerError">Internal server error.</string>
    <string name="msg_unauthorizedError">Unauthorized.</string>
    <string name="msg_cityRecorded">The city \"%s\" has been recorded. From tomorrow, the pollen forecast available for this city every day. Sorry for the inconvenience.</string>
    <string name="noResults">No results…</string>
    <string name="btn_refreshForecast">Refresh forecast</string>
    <!-- End messages -->

    <!-- Punctuation and ASCII-->
    <string name="colonPunctuationMark" translatable="false">": "</string>
    <string name="blankString" translatable="false">-</string>
    <string name="blankSpace" translatable="false">" "</string>
    <string name="bracketOpen" translatable="false">" ("</string>
    <string name="bracketClose" translatable="false">") "</string>
    <string name="arrowUp" translatable="false">▲</string>
    <string name="arrowDown" translatable="false">▼</string>
    <string name="sadFace" translatable="false">:(</string>
    <string name="prefKey_notifications_default" translatable="false">true</string>
    <string name="dateTimeFormatFromPollenCheck" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="simpleDateTimeFormat">HH:mm, MM/dd/yyy</string>
    <!-- End punctuation -->

</resources>
